nav alignment fix

--- a/src/CSS/styles.scss
+++ b/src/CSS/styles.scss
@@ -123,7 +123,7 @@ a:visited {
   }
 }
 .nav-active {
-  transform: translateX(-92%);
+  transform: translateX(-90%);
   padding-left: 3rem;
   max-height: max-content;
 }
